--- a/result/2022-07-26.md
+++ b/result/2022-07-26.md
@@ -46,3 +46,5 @@
 46. [房东每度电按1元收费](https://s.weibo.com//weibo?q=%23%E6%88%BF%E4%B8%9C%E6%AF%8F%E5%BA%A6%E7%94%B5%E6%8C%891%E5%85%83%E6%94%B6%E8%B4%B9%23&Refer=top) 115392
 47. [张碧晨微博直播](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E7%A2%A7%E6%99%A8%E5%BE%AE%E5%8D%9A%E7%9B%B4%E6%92%AD%23&Refer=top) 105983
 48. [巴黎vs大阪钢巴](https://s.weibo.com//weibo?q=%E5%B7%B4%E9%BB%8Evs%E5%A4%A7%E9%98%AA%E9%92%A2%E5%B7%B4&Refer=top) 11585
+49. [汗毛旺盛致蚊子无从下脚](https://s.weibo.com//weibo?q=%23%E6%B1%97%E6%AF%9B%E6%97%BA%E7%9B%9B%E8%87%B4%E8%9A%8A%E5%AD%90%E6%97%A0%E4%BB%8E%E4%B8%8B%E8%84%9A%23&Refer=top) 11577
+50. [德国中产家庭排7小时队领救济粮](https://s.weibo.com//weibo?q=%23%E5%BE%B7%E5%9B%BD%E4%B8%AD%E4%BA%A7%E5%AE%B6%E5%BA%AD%E6%8E%927%E5%B0%8F%E6%97%B6%E9%98%9F%E9%A2%86%E6%95%91%E6%B5%8E%E7%B2%AE%23&Refer=top) 8779
